issue #237 date picker field aligned

--- a/wp-content/themes/minyawns/less/main.less
+++ b/wp-content/themes/minyawns/less/main.less
@@ -5479,8 +5479,7 @@ div.tooltip1:after {
 }
 .bootstrap-timepicker{
 	.add-on{
-		/*height:14px;*/
-		height: 16px;
+		height:14px;
 	}
 }
 	
@@ -8402,20 +8401,8 @@ a{
 
 /*form-fields*/
 #job-form{
-	.hasDatepicker{
-		height: 41px !important;
-	}
-}
-#profile-edit-form{
-	.input-prepend{
-		.add-on{
-			line-height: 20px;
-		}
-	}
-}
-#edit-job-form{
-	.hasDatepicker{
-		height: 27px !important;
+	.ui-spinner{
+		padding: 0 37px 1px 0;
 	}
 }
 #minion-thumbnails{
